Able to add nodes properly

--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <script src="main.js" type="text/javascript"></script>
-    <title>My Title</title>
+    <title>My BTS</title>
 </head>
 <body>
+
 <h1>Welcome to the BinarySearchTree App!</h1>
-
-
-
-<script>
-
-</script>
-
-
 
 <h2>Something</h2>
 
 <button onclick="BinarySearchTree.prototype.add()">Add Node</button>
 
+<button onclick="BinarySearchTree.prototype.preOrder(this.)">PreOrder</button>
 </body>
 </html>
