--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <script src="main.js" type="text/javascript"></script>
     <title>My BTS</title>
 </head>
+
 <body>
 
-<h1>Welcome to the BinarySearchTree App!</h1>
-
-<h2>Something</h2>
+    <h1>Welcome to the BinarySearchTree App!</h1>
 
 <button onclick="BinarySearchTree.prototype.add()">Add Node</button>
 
-<button onclick="BinarySearchTree.prototype.preOrder(this.)">PreOrder</button>
+<button onclick="BinarySearchTree.prototype.traversePreOrder()">PreOrder</button>
+
 </body>
+
 </html>
